--- a/.github/workflows/restart-notification.yml
+++ b/.github/workflows/restart-notification.yml
@@ -24,5 +24,5 @@ jobs:
           npm install
           node index.js
         env:
-          WEBHOOK_URL: ${{ https://prod-188.westus.logic.azure.com:443/workflows/a0230fdd6dcb4fcf938235b08575f906/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=UjoaaHQUIZedJvDgXhxMZ1qI0UlLIOGzTO8YPIcCJ2w }}
+          WEBHOOK_URL: ${{"https://prod-188.westus.logic.azure.com:443/workflows/a0230fdd6dcb4fcf938235b08575f906/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=UjoaaHQUIZedJvDgXhxMZ1qI0UlLIOGzTO8YPIcCJ2w"}}
           TAG_NAME: ${{ steps.output_tag_name.outputs.tag_name }}
