--- a/.github/workflows/tagCreated.yml
+++ b/.github/workflows/tagCreated.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: distributhor/workflow-webhook@v3
         with:
           webhook_type: 'json-extended'
-          webhook_url: https://prod-58.westus.logic.azure.com:443/workflows/64092e0af1254435a6f8c0225da3abff/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=to2G3KisKvlCXorFK53OcITfRbA_4J7bOAfenFAHcHo
+          webhook_url: 	https://webhook.site/a48123de-0687-45dd-8d3f-8401497d13f9
           data: '{ "weapon": "hammer", "drink" : "beer" }'
