--- a/.github/workflows/tagCreated.yml
+++ b/.github/workflows/tagCreated.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   success:
     name: One with everything
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Microsoft Teams Notification
@@ -22,7 +22,7 @@ jobs:
 
   without_optional_params:
     name: One with little info
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Microsoft Teams Notification
@@ -33,7 +33,7 @@ jobs:
 
   with_overwrite:
     name: One with overwrite
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Microsoft Teams Notification
@@ -45,7 +45,7 @@ jobs:
 
   with_raw:
     name: One with raw data
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Microsoft Teams Notification
@@ -62,7 +62,7 @@ jobs:
 
   if_failure:
     name: Only if failure
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Microsoft Teams Notification
