--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           webhook_url='https://your-webhook-endpoint'
           json_data='{"message": "Hello from GitHub Actions!"}'
 
-          curl -X POST -H "Content-Type: application/json" -d "${json_data}" "${secrets.TEAMS_WEBHOOK_URL}"
+          curl -X POST -H "Content-Type: application/json" -d "${json_data}" "${{ secrets.TEAMS_WEBHOOK_URL }}"
