--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,21 @@
-name: Check for New SQL Files
+name: Check for New Files
 
 on:
   push:
-    branches: [ master ]  # Replace with your desired branch
+    branches: [ main ]  # Replace with your desired branch
 
 jobs:
   check_new_files:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Determine new SQL files
+      - name: Determine new files
         run: |
-          new_files=$(git diff --name-only HEAD~ HEAD flyway/sql | grep '^A ')
+          # Replace 'your_folder' with the actual folder path
+          new_files=$(git diff --name-only HEAD^ HEAD 'flyway/sql' | grep '^A ')
           if [ -n "$new_files" ]; then
-            echo "New SQL files detected:"
+            echo "New files detected:"
             echo "$new_files"
             # Replace with your webhook URL and desired payload format
             curl -X POST 	https://webhook.site/a48123de-0687-45dd-8d3f-8401497d13f9 -H "Content-Type: application/json" -d "{\"files\":[$new_files]}"
           fi
-
