--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - flyway/**
 
 jobs:
   # -------------------------------------------------------------
