--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_type: 'json-extended'
-          webhook_url: ${{ secrets.WEBHOOK_URL }}
+          webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
           data: '{ "weapon": "hammer", "drink" : "beer" }'
       
 
