--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,13 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v44
       # NOTE: `since_last_remote_commit: true` is implied by default and falls back to the previous local commit.
+      - shell: bash
+        env:
+          JSON_DOC: ${{ toJSON(${{ steps.changed-files.outputs.all_changed_files }}) }}
       - name: Invoke deployment hook
         uses: distributhor/workflow-webhook@v3
         with:
-          webhook_type: 'json-extended'
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '{ "weapon": "hammer", "drink" : "beer" }'
+          data: ${{JSON_DOC}}
       
 
