--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v44
       # NOTE: `since_last_remote_commit: true` is implied by default and falls back to the previous local commit.
+      - name: move files
       - shell: bash
         env:
           JSON_DOC: ${{ toJSON(${{ steps.changed-files.outputs.all_changed_files }}) }}
