--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ always() }}
     steps:
-    - uses: CalmDownVal/webhook-summary@v1
-      with:
-        url: ${{ secrets.TEAMS_WEBHOOK_URL }}
+    - uses: johannes-huther/webhook.sh@v1
+      env:
+        webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
