--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Flyway Changed
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
-  workflow_dispatch:
+  push:
 jobs:
   send-summary:
     runs-on: ubuntu-latest
