--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: ${{ steps.changed-files.outputs.all_changed_files }}
+          data: ${{ changed-files.outputs.all_changed_files }}
       
 
