--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: CI
 
 on:
-  push:
-    paths:
-      - flyway/**
+  workflow_dispatch
 
 jobs:
   # -------------------------------------------------------------
