--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,24 +18,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: List SQL files in Flyway folder
+      - name: List SQL files in Flyway folder and create JSON array
+        id: create_json_array
         run: |
-          find flyway -type f -name "*.sql" | xargs -n 1 basename > file_list.txt
+          file_list=$(find flyway -type f -name "*.sql" | xargs -n 1 basename)
+          echo "{\"files\": [$(echo "$file_list" | jq -R '. as $line | "\"\($line)\"" | paste -sd ,)]}" > file_names.json
 
-      - name: Create array of file names
-        id: create-array
-        run: |
-          echo "::set-output name=file_names::$(cat file_list.txt)"
-
-      - name: Convert file names to JSON
-        id: convert-to-json
-        run: |
-          echo '{"files": ['$(cat file_list.txt | jq -R '. as $line | "\"\($line)\"" | paste -sd ,)') '}' > file_names.json
           
       - name: Invoke deployment hook
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '$(cat file_names.json)'
+          data: '${{ toJson(steps.create_json_array.outputs.file_names.json) }}'
       
 
