--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,31 +4,30 @@ on:
   workflow_dispatch
 
 jobs:
-  # -------------------------------------------------------------
-  # Using GitHub's API is not supported for push events
-  # -------------------------------------------------------------
-  # 
-  # ----------------------------------------------------------------------------------------------
-  # Using local .git history
-  # ----------------------------------------------------------------------------------------------
-  # Event `push`: Compare the preceding remote commit -> to the current commit of the main branch 
-  # ----------------------------------------------------------------------------------------------
-  changed_files:
-    runs-on: ubuntu-latest  # windows-latest || macos-latest
+  list-files:
+    runs-on: ubuntu-latest
+    outputs:
+      paths: ${{ steps.list-files.outputs.paths }}
     steps:
-      - uses: actions/checkout@v3
-
-      - name: List SQL files in Flyway folder and create JSON array
-        id: create_json_array
-        run: |
-          file_list=$(find flyway -type f -name "*.sql" | xargs -n 1 basename)
-          echo "{\"files\": [$(echo "$file_list" | jq -R '. as $line | "\"\($line)\"" | paste -sd ,)]}" > file_names.json
-
-          
-      - name: Invoke deployment hook
+      - name: List Files
+        id: list-files
+        uses: mirko-felice/list-files-action@v3.0.5
+        with:
+          repo: ${{ github.repository }}
+          ref: ${{ github.ref }}
+          path: "flyway"
+          ext: ".sql"
+  Test:
+    runs-on: ubuntu-latest
+    needs: list-files
+    strategy:
+      matrix:
+        paths: ${{ fromJson(needs.list-files.outputs.paths) }}
+    steps:
+      - name: Output results
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '${{ toJson(steps.create_json_array.outputs.file_names.json) }}'
+          data: '${{ toJson(needs.list-files.outputs.paths) }}'
       
 
