--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,11 @@ jobs:
   Test:
     runs-on: ubuntu-latest
     needs: list-files
-    strategy:
-      matrix:
-        paths: ${{ fromJson(needs.list-files.outputs.paths) }}
     steps:
       - name: Output results
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '${{ toJson(matrix.paths) }}'
+          data: '${{ needs.list-files.outputs.paths }}'
       
 
