--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: DevAutomation
 
 on:
   workflow_dispatch
@@ -9,6 +9,8 @@ jobs:
     outputs:
       paths: ${{ steps.list-files.outputs.paths }}
     steps:
+      - name: Expose git commit data
+        uses: rlespinasse/git-commit-data-action@v1
       - name: List Files
         id: list-files
         uses: mirko-felice/list-files-action@v3.0.5
@@ -25,6 +27,6 @@ jobs:
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '${{ needs.list-files.outputs.paths }}'
+          data: '${{ env.GIT_COMMIT_AUTHOR }},${{ needs.list-files.outputs.paths }}'
       
 
