--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '${{ env.GIT_COMMIT_AUTHOR }},${{ needs.list-files.outputs.paths }}'
+          data: '${{ github.actor }},${{ needs.list-files.outputs.paths }}'
       
 
