--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         uses: distributhor/workflow-webhook@v3
         with:
           webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          data: '${{ github.actor }},${{ needs.list-files.outputs.paths }}'
+          event_name: ${{ github.actor }}
+          data: '${{ needs.list-files.outputs.paths }}'
       
 
