--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Output results
         uses: distributhor/workflow-webhook@v3
         with:
-          webhook_url: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          webhook_url: 'https://hook.eu2.make.com/1plfm86487lbxrvq8siu1lhh8pqxbcp9'
           event_name: ${{ github.actor }}
           data: '${{ needs.list-files.outputs.paths }}'
       
