--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Output results
         uses: distributhor/workflow-webhook@v3
         with:
-          webhook_url: 'https://hook.eu2.make.com/1plfm86487lbxrvq8siu1lhh8pqxbcp9'
+          webhook_url: 'https://prod-128.westus.logic.azure.com:443/workflows/9bc9eeb5dc234a2699de6acf23f20d78/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=KpuKjTetiZPpJbXpxkmeNsJkwmsR18RpldDPqIFW890'
           event_name: ${{ github.actor }}
           data: '${{ needs.list-files.outputs.paths }}'
       
